# waste__district_vision_v2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
configs/data_collection/: default_data_collection.yaml
configs/datasets/: default_template.yaml
configs/tracking/: default_bytetrack.yaml
configs/training/: baseline.yaml
models/: model_registry_example.json
scripts/: run_dashboard.py
scripts/data_collection/: main_data_collection_v2.py
scripts/data_preparation/: analyze_labels.py  extract_balanced_frames.py  split_dataset.py  validate_labels.py
scripts/inference/: interference_infractions.py  run_inference.py
scripts/training/: default_dataset.yaml  train.py  train_resume.py
scripts/utilities/: Run_validations.py  cleanup_workspace.sh  export_model.py  label_map.json  model_manager.py
src/dashboard/: app.py  infractions.py
src/interference/: bucket_infraction_detector.py
src/models/: detector.py  inference_analyzer.py
src/utils/: camera_detection_util.py  config_manager.py  model_registry_loader.py  storage_manager.py
tests/: conftest.py  test_config.py
tests/test_utils/: test_camera_manager.py  test_frame_analyzer.py  test_motion.py  test_storage_manager.py
